# SoftwareDevLinux2025

./: README.md
04_Debugging/: Makefile  README.md  debug_script_1.gdb  debug_script_2.gdb  range.c  reference1  reference2
05_Regexps/: Makefile  README.md  esub.c
06_Tracing/: Makefile  README.md  move.c  rem.c
07_Environmental/: Makefile.am  README.md  configure  configure.ac  test1.sh
07_Environmental/src/: rhasher.c
08_I18n/: Makefile.am  README.md  configure.ac
08_I18n/po/ru/: numbergame.po
08_I18n/src/: numbergame.c
11_Documenting/: .Doxyfile.in.un~  .numbergame.c.un~  Doxyfile.in  Makefile.am  README.md
11_Documenting/src/: .numbergame.c.un~  numbergame.c
12_InstallPackaging/: .Makefile.am.un~  Doxyfile.in  Makefile.am  README.md  configure.ac
12_InstallPackaging/po/ru/: numbergame.po
12_InstallPackaging/src/: Makefile.am  guesser.c  guesser.h  numbergame.c
12_InstallPackaging/tests/: Makefile.am  tran.ck
